<resources>
    <string name="app_name">KCR Driver</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="chart_room">Chart Room</string>
    <string name="sale_order">Sale Order</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_key">AIzaSyA-s_PMPF2caE3fN02xMJkvD_7OYFo4PYg</string>
</resources>
