<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_chart"
            android:icon="@drawable/ic_circle"
            android:title="@string/chart_room" />
        <item
            android:visible="false"
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_shopping"
            android:title="@string/sale_order" />
    </group>

    <item android:title="Other Info">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
